缩略图正则调整

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -38,16 +38,13 @@ http {
         #charset koi8-r; 
         #access_log  logs/host.access.log  main;
  
-        location ~*group([0-9])/M00/(.+)\.(jpg|jpeg|gif|png)() {
+        location ~*group([0-9])/M00/(.*)\.(jpg|jpeg|gif|png)() {
             #alias /fastdfs/storage/data;
             ngx_fastdfs_module;
             set $width      $arg_w;
             set $height     $arg_h;
-
             rewrite ~*group([0-9])/M00/(.*)\.(jpg|jpeg|gif|png) group1/M00/$2.$3 break;
-
             image_filter crop $width $height;
-
             image_filter_buffer 100M;
             image_filter_jpeg_quality 75;
         }
@@ -56,6 +53,7 @@ http {
             #alias /fastdfs/storage/data;
             ngx_fastdfs_module;
         }
+
  
         location / {
             root   html;
